# R-type

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compile.sh  configEntity.yml  configLevel1.yml
configEntities/: configEntity.yml  configEntity2.yml
configLevels/: configLevel1.yml  configLevel2.yml
gameEngine/: .clang-tidy  RTypeGame.cpp  RTypeGame.hpp  updateDataStruct.hpp
gameEngine/ECS/: Mediator.hpp  using.hpp
gameEngine/ECS/Managers/Component/: ComponentArray.hpp  ComponentManager.hpp  IComponentArray.hpp  StructComponent.hpp
gameEngine/ECS/Managers/Entity/: EntityManager.hpp
gameEngine/ECS/Managers/System/: System.hpp  SystemManager.hpp  Systems.hpp
gameEngine/RTypeGame/: ARTypeGame.cpp  ARTypeGame.hpp  RTypeGameClient.cpp  RTypeGameClient.hpp  RTypeGameServer.cpp  RTypeGameServer.hpp
gameEngine/Renderer/: ConfigParser.hpp  Elements.hpp  Events.hpp  IRenderer.hpp  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprites.hpp  configParser.cpp
gameEngine/Snapshot/: SnapshotData.hpp
network/: AsioNetworkThread.hpp  CMakeLists.txt  Client  Errors.hpp  Message.hpp  Server  ThreadSafeQueue.hpp  conanfile.txt
network/client/: CMakeLists.txt  Client
network/client/src/: AsioUdpClient.cpp  AsioUdpClient.hpp  AsioUdpClientInterface.hpp  RtypeClient.cpp  RtypeClient.hpp  checkParameters.cpp  checkParametersClient.cpp  main.cpp
network/client/src/rtypeClient/: RtypeUdpClient.cpp  RtypeUdpClient.hpp  inputToMessage.cpp  rtypeRfc.hpp
network/gameServ/: GameServer.hpp  Snapshot.hpp
network/server/: CMakeLists.txt  Server
network/server/src/: AsioUdpServer.cpp  AsioUdpServer.hpp  AsioUdpServerInterface.hpp  LevelConfigParser.cpp  LevelConfigParser.hpp  RtypeServer.cpp  RtypeServer.hpp  checkParametersServer.cpp  checkParamsServer.cpp  main.cpp
network/server/src/rtypeServer/: clientsEvents.hpp  rtypeRfc.hpp  rtypeUdpServer.cpp  rtypeUdpServer.hpp
src/: RTypeGame.hpp
src/ECS/: Mediator.hpp  using.hpp
src/ECS/Managers/: using.hpp
src/ECS/Managers/Component/: ComponentArray.hpp  ComponentManager.hpp  IComponentArray.hpp
src/ECS/Managers/Entity/: EntityManager.hpp
src/ECS/Managers/System/: System.hpp  SystemManager.hpp  Systems.hpp
src/Error/: ErrorRender.hpp
src/Renderer/: Elements.hpp  Events.hpp  IRenderer.hpp  Renderer.cpp  Renderer.hpp
